# pricescoutai

./: .env-template  README.md  agent.py  app.py  ebay_scraper.py  kleinanzeigen_scraper.py  pyproject.toml  requirements.txt  scrape_results_helpers.py  streamlit_app.py  streamlit_app_local.py
.streamlit/: config.toml
