[project]
name = "pricescoutai"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Frey",email = "patrickfreyleanpm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-openai (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
